@@ -398,4 +398,6 @@
 
     <string name="sort_order_ascending">ASC</string>
     <string name="sort_order_descending">DESC</string>
+
+    <string name="press_color_to_apply">Press on Color to apply</string>
 </resources>
