@@ -1,10 +1,11 @@
 <html>
 <head><style type="text/css">body {font-size: smaller;}</style></head>
 <body>
-  <b>3.x.x</b>
+  <b>3.8.0</b>
   <ul>
     <li>Added <i>reset all</i> option in sudoku list menu. Thanks @D0ct0rZl0!</li>
     <li>Added a new option to fill in notes with all values.</li>
+    <li>Added <i>ASC/DESC</i> sorting and hex input for custom theme colours. Thanks @demield!</li>
   </ul>
   <b>3.7.0</b>
   <ul>
